[package]
name = "flow_er"
version = "0.3.0"
authors = ["LighghtEeloo <eelooecho@163.com>"]
edition = "2018"
readme = "readme.md"
repository = "https://github.com/LighghtEeloo/flow.er"

[features]
cli = ["flow_cli"]
iced = []
yew = ["flow_yew"]

[workspace]
members = [
	"flow_arena",
	"flow_vessel",
	"flow_vase/flow_cli",
	# "flow_vase/flow_iced",
	"flow_vase/flow_yew",
]

[dependencies.flow_cli]
path = "flow_vase/flow_cli"
optional = true

[dependencies.flow_yew]
path = "flow_vase/flow_yew"
optional = true
