[package]
name = "flow-er"
version = "0.4.0"
authors = ["LighghtEeloo <eelooecho@163.com>"]
edition = "2018"
readme = "readme.md"
repository = "https://github.com/LighghtEeloo/flow.er"

[features]
default = ["cli"]
cli = ["flow-cli"]
# iced = ["flow-iced"]
# yew = ["flow-yew"]
acc = ["flow-acc"]

[workspace]
members = [
	"flow_arena",
	"flow_vessel",
	"flow_vase/flow_cli",
	# "flow_vase/flow_iced",
	# "flow_vase/flow_yew",
	"flow_vase/flow_acc",
]

[dependencies.flow-cli]
path = "flow_vase/flow_cli"
optional = true

# [dependencies.flow-yew]
# path = "flow_vase/flow_yew"
# optional = true

[dependencies.flow-acc]
path = "flow_vase/flow_acc"
optional = true
