[package]
name = "flow-arena"
version = "0.1.0"
authors = ["LighghtEeloo <eelooecho@163.com>"]
edition = "2018"
repository = "https://github.com/LighghtEeloo/flow.er"
# readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde1"]
serde1 = []

[dependencies]
# rand = { version = "0.7", features = ["wasm-bindgen"] }
serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# wasm-timer = "0.2.0"
# chrono = { version = "0.4", features = ["unstable-locales"] }
