[package]
name = "flow_arena"
version = "0.4.4"
authors = ["LighghtEeloo <litiaeeloo@gmail.com>"]
edition = "2021"
description = "A HashMap managed Graph Model with the concept of ownership"
readme = "Readme.md"
repository = "https://github.com/LighghtEeloo/flow.er"
license-file = "../License"
exclude = ["./doc_sync.py"]
keywords = ["arena", "flow", "tree", "graph"]
categories = ["data-structures", "accessibility"]

[features]
default = ["serde_impl"]
serde_impl = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"] 
optional = true

[dev-dependencies]
serde_json = "1"
