[package]
name = "flow_vessel"
version = "0.1.0"
authors = ["LighghtEeloo <eelooecho@163.com>"]
edition = "2018"
repository = "https://github.com/LighghtEeloo/flow.er"

[dependencies]
chrono = "0.4"
rand = "0.8"

[dependencies.serde]
version = "1"
features = ["derive"] 

[dev-dependencies]
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"

[dependencies.flow_arena]
path = "../flow_arena"
