[package]
name = "flow_vessel"
version = "0.1.2"
authors = ["LighghtEeloo <eelooecho@163.com>"]
edition = "2018"
repository = "https://github.com/LighghtEeloo/flow.er"

[dependencies]
chrono = "0.4"
serde_json = "1"
futures = "0.3"
log = "0.4.6"
wasm-logger = "0.2.0"
# strum = "0.20"
# strum_macros = "0.20"
# indexmap = "1.6"

[dependencies.rand]
version = "0.8"
features = ["getrandom"]

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.serde]
version = "1"
features = ["derive"] 

[dependencies.phf]
version = "0.8"
features = ["macros"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"

[dependencies.flow_arena]
path = "../flow_arena"
