[package]
name = "flow-acc"
version = "0.1.0"
authors = ["LighghtEeloo <eelooecho@163.com>"]
edition = "2018"

[dependencies]
# strum = "0.20"
# strum_macros = "0.20"
rand = { version = "0.7", features = ["wasm-bindgen"] }
serde = "1"
serde_json = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["unstable-locales"] }
log = "0.4.6"
wasm-logger = "0.2.0"

[dependencies.yew]
git = "https://github.com/yewstack/yew.git"
rev = "3740140"
package = "yew"

[dependencies.yew-services]
git = "https://github.com/yewstack/yew.git"
rev = "3740140"
package = "yew-services"

# [dependencies.flow_arena]
# path = "../../flow_arena"

[dependencies.flow_vessel]
path = "../../flow_vessel"
